# rough

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config
assets/: config.json
src/: app.rs  app_use.rs  main.rs
src/app/: mod.rs  transparency.rs  utils.rs
src/apps/: mod.rs
src/config/: mod.rs
src/get_apps/: mod.rs
src/modules/: calc.rs  mod.rs  news.rs  weather.rs
src/modules/video_downloader/: facebook.rs  mod.rs  pinterest.rs  reddit.rs  rumble.rs  twitter.rs  types.rs
src/styling/: mod.rs  utils.rs
src/tests/: mod.rs  utils.rs
src/utils/: get_apps.rs  mod.rs  types.rs
