[package]
name = "rough"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = "0.4.24"
clap = { version = "3.2.8", features = ["derive"] }
eval = "0.4.3"
gtk = "0.15.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
